--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,3 +8,17 @@ $danger-color: #dc3545;
 $light-gray: #f8f9fa;
 $border-color: #e9ecef;
 $text-muted: #6c757d;
+
+
+
+$breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
+ 
+
+
