--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -14,7 +14,7 @@ body {
 //   transition: all 0.2s ease-in-out;
 
 //   &:focus {
-//     border-color: $primary-color;
+//     border-color: $color-primary;
 //     box-shadow: 0 0 0 3px rgba($primary-color, 0.1);
 //     outline: none;
 //   }
